2008-10-16 02:03-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* PBProjectGenerator.h
	* PBProjectGenerator.m: Added class to handle generation of the
	PC.project file.

2008-10-16 02:02-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile
	* main.m
	* PBMakefileGenerator.m: Added code to generate PC.project file.

2008-10-12 21:46-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m: Add QuartzCore to the list of excluded 
	libraries.

2008-10-12 21:43-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m
	* PBMakefileGenerator.m
	* PBPbxNativeTarget.h
	* PBPbxNativeTarget.m: Create source sections based on metadata in
	the pbxproj file rather than by file extentions.

2008-10-12 18:26-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m: Automatically generate library/framework
	linking information.  Filter out well-known Apple specific libraries
	and frameworks.

2008-10-10 18:16-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Fixes to make pbxbuild function properly on Windows.

2008-10-08 00:08-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Link using relative paths.
	* PBMakefileGenerator.m: Sort contents of the make file entries.

2008-08-29 22:48-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* PBPbxNativeTarget.m: If the PRODUCT_NAME key isn't available then
	fall back to using the "name" key in the target dictionary.

2008-08-03 20:22-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile
	* main.m
	* PBMakefileGenerator.m: Replace target names with versions that have
	"_" instead of " " since this causes an issue.
	* PBPbxNativeTarget.h:
	* PBPbxNativeTarget.m: Add method targetNameReplacingString.

2008-07-08 16:10-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* PBPbxGroup.m: Correction for bug #23795.  Patch submitted by
	Peter Cooper <comrade@obverse.com.au>
